# mcp-surf-demo

./: .env.example  .gitignore  ARCHITECTURE.md  GETTING_STARTED.md  README.md  basic_demo.py  check.py  config.py  debug_fetch_browser.py  examples.py  fetchedPage.html  main.py  pyproject.toml  run.py  simple_test.py  test.py  test_fetch_browser.py  test_gemini_format.py  test_gemini_simple.py  test_integration.py
tests/: README.md  __init__.py  simple_test.py  test.py
